# TouchNote-NLU

./: .dockerignore  Dockerfile  LICENSE  README.md  Test.py  app.py  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
custom_nlu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: featurized_data.parquet  model.pkl  nlu_train_data.json
html/: index.html
libs/connectors/: big_query_connector.py  mysql.py
libs/data_pipelines/: dm_featurize.py  dm_worker.py
libs/ml/: custom_nlu.py
main/scripts/: build_model.py  test.py
settings/: DM_Cats.json  data_master_api.json  topics.txt
